--- a/README.org
+++ b/README.org
@@ -50,6 +50,10 @@ its content.
 
 ** Julio 2023
 
+*** 12-Jul-23
++ [[https://www.isa-afp.org/entries/Gray_Codes.html][Gray codes for arbitrary numeral systems (in Isabelle/HOL)]]. ~ Maximilian Spitz. #ITP #IsabelleHOL
++ [[https://theconversation.com/como-evaluar-a-los-estudiantes-en-tiempos-de-chatgpt-206371][Cómo evaluar a los estudiantes en tiempos de ChatGPT]]. ~ M. Paz Prendes Espinosa, María del Mar Sánchez Vera y Víctor González Calatayud. #ChatGPT #Educación
+
 *** 11-Jul-23
 + [[https://www.cs.cmu.edu/~mheule/publications/mc-paper.pdf][Certified knowledge compilation with application to verified model counting]]. ~ Randal E. Bryant, Wojciech Nawrocki, Jeremy Avigad, Marijn J. H. Heule. #ITP #Lean4
 + [[https://drops.dagstuhl.de/opus/volltexte/2023/18223/pdf/LIPIcs-ECOOP-2023-30.pdf][Interaction tree specifications: a framework for specifying recursive, effectful computations that supports auto-active verification]]. ~ Lucas Silver, Eddy Westbrook, Matthew Yacavone, Ryan Scott. #ITP #Coq
